# localization_slam

./: README.md  prof.url  svd-msq-prove.web.webarchive
14lecture/: CMakeLists.txt
14lecture/ch2/: BUILD  coor2world.cc  libHelloSLAM.h  qr_example.cc
14lecture/ch3/: BUILD  CMakeLists.txt  coor_transform.cc  eigen_basic.cc  eigen_geometry.cc  hw3_7_transform.cc  plotTrajectory.cc  plot_trajectory.cc  viz_geometry.cc
14lecture/ch4/: BUILD  traj_error.cc  use_sophus.cc
14lecture/ch5/: BUILD  CMakeLists.txt  image_basic.cc  jm.cc  pcl_write.cc  stereo.cc  undistorted_img.cc
14lecture/ch6/: BUILD  ceres_basic.cc  g2o_basic1.cc  g2o_basic2.cc  g2o_basic3.cc  g2o_common.h  g2o_main.cc  gauss_newton.cc
14lecture/ch7/: BUILD.bazel  common.cc  common.h  common2.cc  my_orb.cc  my_orb_impl.cc  orb_cv.cc  orb_header.h  pose_estimate_2d2d.cc  pose_estimate_3d2d.cc  pose_estimate_3d3d.cc  triangle.cc
14lecture/ch8/: BUILD.bazel  direct_method.cc  optical_flow.cc
14lecture/ch9/: BUILD.bzl  camera.cc  camera.h  config.h  frame.cc  frame.h  front_end.cc  main.cc  map.cc  map.h  map_point.cc  map_point.h  system.cc  system.h  viewer.cc  viewer.h  visual_odometry.cc  visual_odometry.h
course2_hw_new/devel/: .catkin
course2_hw_new/devel/lib/pkgconfig/: vio_data_simulation.pc
course2_hw_new/devel/lib/vio_data_simulation/: vio_data_simulation_node  vio_data_simulation_node_txt
course2_hw_new/devel/share/vio_data_simulation/cmake/: vio_data_simulationConfig.cmake
course2_hw_new/install/share/vio_data_simulation/cmake/: vio_data_simulationConfig.cmake
course2_hw_new/vio_data_simulation/src/: imu.cpp
imu_utils/: IMU_test_imu_param.yaml  data_IMU_test_acc_x.txt  data_IMU_test_acc_y.txt  data_IMU_test_acc_z.txt  data_IMU_test_gyr_t.txt  data_IMU_test_gyr_x.txt  data_IMU_test_gyr_y.txt  data_IMU_test_gyr_z.txt  data_IMU_test_sim_acc_x.txt  data_IMU_test_sim_acc_y.txt  data_IMU_test_sim_acc_z.txt  data_IMU_test_sim_gyr_x.txt  data_IMU_test_sim_gyr_y.txt  data_IMU_test_sim_gyr_z.txt
imu_utils/devel/: .catkin  setup.sh
imu_utils/devel/lib/code_utils/: matIO_test  sumpixel_test
imu_utils/devel/lib/pkgconfig/: code_utils.pc  imu_utils.pc
imu_utils/devel/share/code_utils/cmake/: code_utilsConfig.cmake
imu_utils/devel/share/imu_utils/cmake/: imu_utilsConfig.cmake
imu_utils/install/: .rosinstall  local_setup.sh
imu_utils/install/share/code_utils/cmake/: code_utilsConfig.cmake
imu_utils/install/share/imu_utils/cmake/: imu_utilsConfig.cmake
src/: CMakeLists.txt
src/imu_utils/: package.xml
src/imu_utils/scripts/: draw_allan.m  draw_allan_acc.m  test.mlx
src/imu_utils/src/: imu_an.cpp
src/vio/: CMakeLists.txt  package.xml
src/vio/src/: lie_algebra.cc
src/vio_data_simulation-ros_version/src/: gener_alldata.cpp
vio_assign/CurveFitting_LM/app/: CurveFitting.cpp
vio_assign/CurveFitting_LM/backend/: CMakeLists.txt  problem.cc  problem.h  problem_1.cc  problem_2.cc
vio_assign/course2_hw_new/: readme.md
vio_assign/course2_hw_new/src/vio_data_simulation-ros_version/src/: param.h
vio_assign/course2_hw_new/vio_data_simulation/main/: gener_alldata.cpp
vio_assign/course2_hw_new/vio_data_simulation/src/: imu.cpp
vio_assign/course4/nullspace_test/: hessian_nullspace_test.cpp  readme.md
vio_assign/course6_hw/: CMakeLists.txt  README.md  exec_res.md  frame_ratio.csv  noise_var_ratio.csv  ratio_curve.py  triangulate.cpp
vio_assign/course7/vin_course/: CMakeLists.txt
vio_assign/course7/vin_course/config/: euroc_config.yaml  vio_sim_config.yaml
vio_assign/course7/vin_course/exec_result/: 10_tp_work  10_tp_work.csv  1_tp_work  1_tp_work.csv  20_tp_work  20_tp_work.csv  5_tp_work  5_tp_work.csv  ana.py  exec_res.md  no_tp  no_tp.csv  trend.py
vio_assign/course7/vin_course/include/: System_sim.h  param.h
vio_assign/course7/vin_course/include/backend/: bounded_queue.h  concurrent_queue.h  macros.h  mutex.h  problem.h  problem_dl.h  problem_dogleg.h  thread.h  thread_pool.h  thread_pool2.h  wait_strategy.h
vio_assign/course7/vin_course/src/: System.cpp  System_sim.cpp  estimator.cpp  feature_manager.cpp  feature_tracker.cpp  param.cpp
vio_assign/course7/vin_course/src/backend/: problem.cc  problem_dl.cc  problem_dogleg.cc  problem_dogleg_deprecated.cc  problem_faster_hessian.cc  stack_smash.cc
vio_assign/course7/vin_course/src/test/: openmp_test.cc  thread_pool_test.cc
vio_assign/course7/vin_course/test/: run_euroc.cpp  run_sim_vio.cpp
vio_assign/course8/: CMakeLists.txt
vio_assign/course8/src/: example_ls.cc
vio_assign/hw3_assign/: code_execution_result.md  draw.py  iter_lamda.csv  lm.m
vio_assign/hw_course5_new/: exe_res.md
vio_assign/hw_course5_new/app/: CMakeLists.txt  TestMonoBA.cpp
vio_assign/hw_course5_new/backend/: CMakeLists.txt  edge_prior.cpp  edge_prior.h  problem.cc
vio_assign/vio_data_simulation/main/: gener_alldata.cpp
vio_assign/vio_data_simulation/src/: utilities.cpp  utilities.h
vslam_course/: .bazelrc
vslam_course/app/: BUILD.bazel  calib.cc  gradient_inspect.cc  harris_track.cc  sift_match.cc
vslam_course/calib/: dlt.cc  dlt.h
vslam_course/common/: BUILD.bazel  cam_mgr.cc  cam_mgr.h  camera.cc  camera.h  common_test.cc  draw_utils.cc  draw_utils.h  image.h  math_util.h  point.h  pose.h  test.cc  util.cc  util.h
vslam_course/feature/: BUILD.bazel  harris.cc  harris.h  sift.cc  sift.h
vslam_course/math/: BUILD.bazel  dlt.cc  dlt.h
