

cc_binary(
    name = "orb_cv",
    srcs = ["orb_cv.cc"],
     copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d",
    ]


)


cc_binary(
    name = "my_orb",
    srcs = [ "my_orb.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d",
    ],
    deps = [
        "my_orb_impl"
    ]
)

cc_library(
    name = "my_orb_impl",
    srcs = ["my_orb_impl.cc"],
    hdrs = ["orb_header.h"],
     copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1  -msse4.2",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d",
    ]

)

cc_binary(
    name = "triangle",
    srcs = ["triangle.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -I/usr/include/eigen3  -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d",
    ],
    deps = [
        ":common",
    ]
)

cc_library(
    name = "common",
    srcs = ["common.cc"],
    hdrs = ["common.h"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -I/usr/include/eigen3 -I /usr/include/suitesparse -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-L /usr/local/lib -lg2o_core  -lcxsparse  -lg2o_csparse_extension -lg2o_stuff -lg2o_types_sba -lopencv_core -lopencv_highgui -lopencv_calib3d -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d ",
    ],
)


cc_binary(
    name = "est_2d2d",
    srcs = ["pose_estimate_2d2d.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d",
    ],
    deps = [
        ":common",
    ]
)


cc_binary(
    name = "est_3d2d",
    srcs = ["pose_estimate_3d2d.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d  ",
    ],
    deps = [
        ":common",
    ]
)

cc_binary(
    name = "est_3d3d",
    srcs = ["pose_estimate_3d3d.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lfmt -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d  ",
    ],
    deps = [
        ":common",
    ]
)

 