
cc_binary(
    name = "opt_flow",
    srcs = ["optical_flow.cc"],
    copts = [
        "-std=c++14 -I/usr/include/opencv4 -I/usr/include/eigen3 -D_GLIBCXX_USE_CXX11_ABI=1",
    ],
    linkopts= [
        "-lopencv_core -lopencv_video -lopencv_highgui -lopencv_imgproc -lopencv_imgcodecs -ljpeg -lopencv_features2d  ",
    ],
    deps = [
        #":common",
    ]
)


