load("@rules_cc//cc:defs.bzl", "cc_binary")


cc_binary(
    name = "gradient_ins",
    srcs = ["gradient_inspect.cc"],
    deps = [
        "//common:utils",
    ]

)

cc_binary(
    name = "harris_track",
    srcs = ["harris_track.cc"],
    deps = [
        "//feature:harris_lib",
         "//common:utils",
         "//common:draw_utils",
    ]
    
)


cc_binary(
    name = "calib",
    srcs = ["calib.cc"],
    deps = [
        "//common:utils",
        "//common:cam_mgr",
        "//common:draw_utils",
        "//math:dlt",
    ]

)