load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "common_test",
    srcs = ["common_test.cc"],
    deps = [
        ":cam_mgr",
    ]
)

cc_library(
    name  = "cam_mgr",
    srcs = ["cam_mgr.cc"],
    hdrs = ["cam_mgr.h"],
)

cc_library(
    name = "camera",
    srcs = ["camera.cc"],
    hdrs = ["camera.h"]
)

cc_library(
    name = "pose",
    hdrs = ["pose.h"],
)

cc_library(
    name = "point",
    srcs = ["point.h"],

)



cc_library(
    name = "utils",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    #copts = [
    #    "-std=c++14 -I/usr/include/opencv4 -D_GLIBCXX_USE_CXX11_ABI=1",
    #],
    deps = [
        ":point",
        ":camera",
        "pose"
    ]
)


cc_binary(
    name = "test",
    srcs = ["test.cc"],

)