package(default_visibility = ["//visibility:public"])
cc_library(
    name = "harris_lib",
    srcs = [
        "harris.cc",
    ],
    hdrs = [
        "harris.h",
        
    ],
    deps = [
        "//common:utils"
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sift_lib", 
    srcs = [
        "sift.cc",
    ],
    hdrs = [
        "sift.h",
    ],
    deps = [
        "//common:draw_utils",
        "//common:utils",
        
    ],
    
    

)